@@ -1,1 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2008/04/07 13:07:22 he Exp $
