@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2008/04/07 13:07:22 he Exp $
-
-SHA1 (String-Random-0.22.tar.gz) = 95f028f64caf13b75b871e4545556d6f8be6653b
-RMD160 (String-Random-0.22.tar.gz) = 9159b9f9955b650ff616e14eea2b314454e03819
-Size (String-Random-0.22.tar.gz) = 7629 bytes
